2002-10-17  Derek Atkins <derek@ihtfp.com>

	* fix bug #96030 -- change "Customer/Vendor Name" to "Company Name"

	* remove (old, unused) dialog-job-select.[ch] files from CVS.
	* fix bug #96035 -- do not limit searches to the last-chosen object.
	
2002-10-16  Joshua Sled  <jsled@asynchronous.org>

	* src/app-utils/gnc-exp-parser.c (gnc_exp_parser_parse): This
	function now fails correctly if there are un-bound variables in
	the expression.  This causes expressions like 'AUD 1.23' to fail.
	This is related to, but not a fix for, Bug#95474.

2002-10-16  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/hbci-account-picker.c,
	dialog-hbci-trans.c, glade/hbci.glade: Grey out unimplemented
	buttons.

2002-10-16  Derek Atkins  <derek@ihtfp.com>
	* add more debugging to new PostgresBackend functions

	* fix call to pgend_trans_rollback_edit()
	* fix call to pgend_trans_commit_edit()
	
2002-10-15  Derek Atkins  <derek@ihtfp.com>
	* Christian Krause's dialog-utils patch for style

	* Update the Backend API in the engine for better plugability.
	  Change the File, Net, and Postgres backends to use the new API.
	  Fixes bug 94648.

	* src/engine/engine-helpers.c: fix a compiler warning
	
2002-10-14  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c (process_auto_create_list): Use
	the appropriate function for creating toCreateInstances to fix
	Bug#95637.
	(sxsld_get_future_created_txn_count): Added to assist in
	next-page-determination.
	(sxsld_disposition_changed): Correctly predicts
	post-processing/future txn count; fixes Bug#95734.

2002-10-14  Joshua Sled  <jsled@asynchronous.org>

	* src/app-utils/gnc-exp-parser.c (func_op): Remove
	seemed-like-a-bad-idea explicit negation of calculated values;
	fixes Bug#95781.

2002-10-14  Derek Atkins  <derek@ihtfp.com>
	* src/backend/file/test-xml-transaction.c -- use gnc_numeric_equal()
	  to compare split value and quantities in tests, because Splits can